# STQA-HPC-Project

./: .gitignore  .makefile  CMakeLists.txt  README.md
data/: InputDataExample.txt
doc/: Doxyfile
include/: AbstractJob.h  AbstractScheduler.h  AbstractSimulator.h  Curriculum.h  Group.h  HPCParameters.h  HPCSimulator.h  ListQueue.h  Node.h  Researcher.h  Simulator.h  Student.h  User.h  random.h  weekendEvent.h
src/: AbstractJob.cpp  AbstractScheduler.cpp  AbstractSimulator.cpp  Curriculum.cpp  Group.cpp  HPCParameters.cpp  HPCSimulator.cpp  ListQueue.cpp  Node.cpp  Researcher.cpp  Simulator.cpp  Student.cpp  User.cpp  main.cpp  weekendEvent.cpp
tests/: CMakeLists.txt  Group-test.cpp  Makefile  factorial-test.cpp
